--- a/index.html
+++ b/index.html
@@ -206,6 +206,11 @@
     <script src="./js/action.js"></script>
     <script src="./js/cake.js"></script>
     <script src="./js/modal.js"></script>
+    <script>
+    setTimeout(function(){
+ 	alert("Click Loadingnya yuk untuk lanjut!"); 
+}, 5000);
+    </script>
 </body>
 
 </html>
